--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -11,33 +11,35 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-
+<h4>PHARRELL WILLIAMS</h4>
           <!-- Level 2 'HAPPY' Header -->
-
+<h2>HAPPY</h2>
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-
+<h4>FROM DESPICABLE ME 2 ORIGINAL MOTION PICTURE SOUNDTRACK</h4>
         </div>
       </div>
 
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-
+<h3>FROM DESPICABLE ME 2 ORIGINAL MOTION PICTURE SOUNDTRACK</h3>
         <!-- Level 1 'HAPPY' Header -->
-
+<h1>HAPPY</h1>
         <!-- Level 3 'WRITTEN BY...' Header -->
-
+<h3>WRITTEN BY PHARRELLWILLIAMS </h3>
         <!-- pararaph text 'PUBLISHED BY...' -->
-
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
+        <p>PUBLISHED BY EMI APRIL MUSIC, INC. / MORE WATERFROM NAZARETH (ASCAP). ADMIN BY SONY/ATV MUSIC PUBLISHING LLC.</p>
+        <!-- span text 'PHARRELLWILLIAMS.COM' --> 
+<p>For more information, visit <span>PHARRELLWILLIAMS.COM</span></p>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Columbia Records Logo">
         <!-- span text 'COLUMBIARECORDS.COM' -->
+        <p>Visit <span>COLUMBIARECORDS.COM</span> for more details.</p>
 
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="Sony Music Logo">
 
       </div>
     </div>
